--- a/angular_app/src/app/app.component.html
+++ b/angular_app/src/app/app.component.html
@@ -2,5 +2,8 @@
   ><h1>{{ title }}</h1></a
 >
 <app-header></app-header>
-<h1 (click)="moveGameMain(game)">{{ game.gamename }}</h1>
+<div class="container gamename">
+  <span (click)="moveGameMain(game)" class="superbig">{{ game.gamename }}</span>
+</div>
+
 <router-outlet></router-outlet>
