--- a/angular_app/src/app/app.component.scss
+++ b/angular_app/src/app/app.component.scss
@@ -1,11 +1,22 @@
+// @import '../styles.scss';
 a {
-    background-color: darkgreen; // 深緑の背景
-    color: white; // 文字色を白に設定
-    display: block; // ブロック要素として設定し、下のpaddingやmarginを適用するため
-    padding: 10px 0; // 上下に10pxのpaddingを追加して帯状にする
-    text-align: left; // タイトルを中央寄せにする
+  // background-color: rgb(37, 138, 37); // 深緑の背景
+  background-color: #268300;
+  color: white; // 文字色を白に設定
+  display: block; // ブロック要素として設定し、下のpaddingやmarginを適用するため
+  padding: 5px 0; // 上下に10pxのpaddingを追加して帯状にする
+  text-align: left; // タイトルを左寄せ
+  width: 100%;
+}
+.superbig {
+  font-size: 40px;
+  color: white;
+}
 
-    h1 {
-        margin: 0; // h1のデフォルトの余白を取り除く
-    }
+.container {
+  &.gamename {
+    border-color: #004d40;
+    background-color: #004d40;
+    padding: 10px;
+  }
 }
