--- a/angular_app/src/app/newgame/newgame.component.html
+++ b/angular_app/src/app/newgame/newgame.component.html
@@ -1,20 +1,28 @@
 <h1>新規大会作成</h1>
 <form (ngSubmit)="onSubmit()">
-    <div >
-        <label for="group">大会名</label>
-        <input type="text" id="group" name="gameName" [(ngModel)]="gameName" required>
-    </div>
-    <div>
-        <label for="private">公開</label>
-        <input type="radio" name="open" id="private" value=true [(ngModel)]="strOpen" required>
-        <label for="close">非公開</label>
-        <input type="radio" name="open" id="close" value=false [(ngModel)]="strOpen" required>
-        
-    </div>
-    <div>
-        <label for="span">開催期間</label>
-        <input type="text" id="span" name="span" [(ngModel)]="span" required>
-    </div>
+  <div>
+    <label for="group">大会名</label>
+    <input type="text" id="group" name="gameName" [(ngModel)]="gameName" required />
+  </div>
+  <div>
+    <label for="private">公開</label>
+    <input type="radio" name="open" id="private" value="true" [(ngModel)]="strOpen" required />
+    <label for="close">非公開</label>
+    <input type="radio" name="open" id="close" value="false" [(ngModel)]="strOpen" required />
+  </div>
+  <div>
+    <form [formGroup]="range">
+      <mat-form-field class="example-form-field">
+        <mat-label>開催期間</mat-label>
+        <mat-date-range-input [rangePicker]="picker">
+          <input matStartDate matInput placeholder="Start date" formControlName="start" />
+          <input matEndDate matInput placeholder="End date" formControlName="end" />
+        </mat-date-range-input>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+      </mat-form-field>
+    </form>
+  </div>
 
-    <button type="submit">作成</button>
+  <button type="submit">作成</button>
 </form>
