--- a/angular_app/src/styles.scss
+++ b/angular_app/src/styles.scss
@@ -1,5 +1,323 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use "@angular/material" as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$angular_app-primary: mat.define-palette(mat.$indigo-palette);
+$angular_app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$angular_app-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$angular_app-theme: mat.define-light-theme(
+    (
+        color: (
+            primary: $angular_app-primary,
+            accent: $angular_app-accent,
+            warn: $angular_app-warn
+        )
+    )
+);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($angular_app-theme);
+
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-@import '~@angular/material/prebuilt-themes/purple-green.css';
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+// @import '~@angular/material/prebuilt-themes/purple-green.css';
+
+/* styles.scss or component.scss */
+
+$green: #268300;
+$grade: #00695c;
+$cellline: #ddd;
+$header: #37474f;
+$tablehover: #f0f0f0;
+$containerline: #1fac37;
+$slash: #797979cd;
+$canclickblue: #0066aa;
+$icon: #188542;
+$date: #1b521f;
+
+mat-form-field {
+    width: 300px;
+    height: 75px;
+}
+
+.grade {
+    background-color: $grade;
+    color: white;
+    padding: 5px 5px 4px 5px;
+    margin: 10px;
+    border-radius: 5px;
+    font-size: small;
+    letter-spacing: -2px;
+}
+
+.racename {
+    display: inline-block;
+    font-weight: 700;
+    padding: 5px 10px 5px 5px;
+    margin: 0px;
+}
+
+.center-text {
+    text-align: center;
+    display: block; // この行を追加して、spanをブロック要素として表示
+    align-items: center;
+}
+
+.table {
+    width: calc(100% - 20px); // コンテナの幅を設定
+    overflow-x: auto !important;
+    margin: 0 10px 0 10px;
+    overflow-x: hidden;
+
+    table {
+        padding: 10px;
+        border-collapse: collapse; // セルのボーダーを一つにまとめる
+        background-color: white;
+
+        th,
+        td {
+            border: 1px solid #ddd; // セルのボーダーを設定
+            padding: 0px 0px; // セルの内側の余白を設定
+            text-align: center; // テキストを中央に配置
+
+            &.place {
+                // 順位の列
+                width: 50px;
+                min-width: 50px;
+            }
+
+            &.horse {
+                // 出走馬の列
+                width: 200px;
+                min-width: 200px;
+            }
+
+            .participant {
+                // 3番目以降の列
+                width: 100px;
+                min-width: 100px;
+            }
+        }
+
+        thead {
+            background-color: $header; // ヘッダーの背景色を設定
+
+            th {
+                font-weight: bold; // ヘッダーのテキストを太字にする
+                color: white;
+                padding: 5px;
+            }
+        }
+
+        tbody tr:hover {
+            background-color: $tablehover; // ホバー時の背景色を設定
+        }
+
+        &.payout {
+            th,
+            td {
+                &.ticket {
+                    // 1番目の列
+                    width: 50px;
+                    min-width: 50px;
+                }
+
+                &.price {
+                    // 2番目の列
+                    width: 200px;
+                    min-width: 200px;
+                }
+            }
+        }
+    }
+}
+
+.title {
+    font-weight: 900;
+}
+
+.container {
+    margin-top: 10px;
+
+    margin-left: 2px;
+    border-top: 4px solid $containerline;
+    padding-top: 5px;
+    width: calc(100% - 5px);
+    background-color: #e9e9e9;
+    padding-bottom: 5px;
+}
+
+.vote-switch {
+    margin-top: 0;
+    margin-bottom: 0;
+    border-left: 1px dashed $slash;
+    align-self: stretch;
+    display: flex;
+    width: 100px;
+
+    .icon {
+        display: flex !important;
+        align-items: center;
+    }
+
+    .isvoted {
+        color: $canclickblue;
+        align-items: center;
+        display: flex;
+        margin: 0 5px 0 5px;
+        font-size: small;
+        font-weight: 700;
+    }
+    .novoted {
+        color: red;
+        align-items: center;
+        display: flex;
+        margin: 0 5px 0 5px;
+        font-size: small;
+        font-weight: 700;
+    }
+}
+
+.pastrace {
+    .flex-box {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 1px 3px rgba(0, 0, 0, 0.1);
+        margin: 7px;
+        height: 50px;
+    }
+    .icon {
+        margin-left: 5px;
+    }
+}
+
+.big {
+    font-size: 5vw; // ビューポートの幅に応じて文字サイズを調整
+    white-space: nowrap;
+}
+
+.container.racelist {
+    .flex-box {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 1px 3px rgba(0, 0, 0, 0.1);
+        margin: 7px;
+    }
+    .racename {
+        color: $canclickblue;
+        font-weight: 700;
+        display: inline-block;
+        width: 200px;
+        font-size: 3vw; // ビューポートの幅に応じて文字サイズを調整
+        white-space: nowrap;
+        &.vote0 {
+            color: rgba(0, 0, 0, 0.696);
+        }
+    }
+
+    .icon {
+        color: $icon;
+        display: inline-block;
+        width: 15px;
+        margin-left: 5px;
+    }
+
+    button {
+        display: inline-block;
+        width: 70px;
+        margin-right: 10px;
+    }
+
+    .votetime {
+        margin-right: 10px;
+    }
+}
+
+.pastrace {
+    .icon {
+        color: $icon;
+        display: inline-block;
+        width: 15px;
+    }
+
+    .here {
+        color: $canclickblue;
+        font-weight: 700;
+        display: inline-block;
+        width: 200px;
+        font-size: 3vw; // ビューポートの幅に応じて文字サイズを調整
+        white-space: nowrap;
+    }
+}
+
+.date {
+    font-size: large;
+    background-color: $date;
+    color: white;
+    width: 100%;
+}
+
+.comment .flex-box {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 1px 3px rgba(0, 0, 0, 0.1);
+    height: 40px;
+    padding: 5px;
+    margin: 3px;
+
+    .content {
+        display: flex;
+        margin: 10 5px;
+        align-items: stretch;
+        margin-left: 10px;
+        width: calc(100% - 20px); // コンテナの幅を設定
+        overflow-x: auto !important;
+        padding: 10px 0px;
+    }
+
+    .name {
+        display: flex;
+        border-right: 1px dashed $slash;
+        align-self: stretch;
+        align-items: center;
+        margin-left: 5px;
+        padding-right: 5px;
+        width: 100px;
+        font-weight: 700;
+        overflow-x: auto !important;
+        padding: 10px 0px;
+    }
+}
