--- a/angular_app/src/app/app.component.scss
+++ b/angular_app/src/app/app.component.scss
@@ -17,6 +17,9 @@ a {
   &.gamename {
     border-color: #004d40;
     background-color: #004d40;
-    padding: 10px;
+    padding: 10px 0;
+    height: 50px;
+    width: 100%;
+    margin: 2px;
   }
 }
