--- a/angular_app/src/app/pastraces/pastraces.component.html
+++ b/angular_app/src/app/pastraces/pastraces.component.html
@@ -20,7 +20,9 @@
     </div>
   </div>
 </div>
-<button (click)="goBack()">戻る</button>
 <div class="container">
-  <div class="flex-box"></div>
+  <div class="flex-box" (click)="goBack()">
+    <span class="icon"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </span
+    ><span class="text">戻る</span>
+  </div>
 </div>
