--- a/angular_app/src/app/raceresult/raceresult.component.html
+++ b/angular_app/src/app/raceresult/raceresult.component.html
@@ -218,12 +218,24 @@
     </table>
   </div>
 </div>
+
 <div class="comment container">
+  <div class="title">投票者のコメント</div>
+  <div class="flex-box" *ngFor="let vote of voteList">
+    <span class="name">{{ vote.name }}</span
+    ><span class="content">{{ vote.comment }}</span>
+  </div>
+</div>
+
+<!-- <div class="comment container">
   <div class="title">コメント</div>
   <div *ngFor="let vote of voteList">
     <span>{{ vote.name }}：</span><span>{{ vote.comment }}</span>
   </div>
-</div>
-<div>
-  <button (click)="goBack()">戻る</button>
+</div> -->
+<div class="goback container">
+  <div class="flex-box" (click)="goBack()">
+    <span class="icon"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></span
+    ><span class="text">過去のレース結果へ戻る</span>
+  </div>
 </div>
