--- a/angular_app/src/styles.scss
+++ b/angular_app/src/styles.scss
@@ -321,3 +321,26 @@ mat-form-field {
         padding: 10px 0px;
     }
 }
+
+.goback.container {
+    .flex-box {
+        display: flex;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 1px 3px rgba(0, 0, 0, 0.1);
+        margin: 7px;
+        height: 50px;
+        align-items: center;
+        justify-content: flex-start;
+
+        .icon {
+            color: #188542;
+            margin-left: 5px;
+        }
+
+        .text {
+            color: #0066aa;
+            font-weight: 700;
+        }
+    }
+}
